--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="/images/ARCHANA RAMAKRISHNAN.png" style="width:250px;height:250px;">
+      <img src="images/ARCHANA RAMAKRISHNAN.png" style="width:250px;height:250px;">
       <ul>
         <li>About Me</li>
         <li>My Work</li>
@@ -52,7 +52,7 @@
           <button>View Project</button>
         </div>
         <div class="img2">
-          <img src="images/placeholder_picture.png" style="width:350px;height:275px;">>
+          <img src="images/placeholder_picture.png" style="width:350px;height:275px;">
         </div>
         <div class="content2">
           <h4>Australian Clean Energy Regulator</h4>
@@ -60,7 +60,7 @@
           <button>View Project</button>
         </div>
         <div class="img3">
-          <img src="images/Damu_wireframe.png" style="width:350px;height:275px;">>
+          <img src="images/Damu_wireframe.png" style="width:350px;height:275px;">
         </div>
         <div class="content3">
           <h4>DAMU, Mobile app</h4>
@@ -77,5 +77,4 @@
       </ul>
     </footer>
   </body>
-  <SCRIPT SRC="INDEX.JS"></SCRIPT>
 </html>
